IVI-28 Разработать API стримера на моках
