# internal/pkg/app/fiber_app.go
@@ -5,12 +5,13 @@ import (
 	swagger "github.com/arsmn/fiber-swagger/v2" // replace with "github.com/gofiber/swagger" ?
 	"github.com/gofiber/fiber/v2"
 	"github.com/gofiber/fiber/v2/middleware/compress"
-	"github.com/gofiber/fiber/v2/middleware/logger"
+	fiberLogger "github.com/gofiber/fiber/v2/middleware/logger"
 	"github.com/gofiber/fiber/v2/middleware/monitor"
 	"github.com/gofiber/fiber/v2/middleware/pprof"
 	"github.com/gofiber/fiber/v2/middleware/recover"
-	"github.com/gofiber/fiber/v2/middleware/requestid"
 	"github.com/pkg/errors"
+	clientDelivery "gitlab.teamdev.huds.su/bivi/backend/internal/client/delivery"
+	streamDelivery "gitlab.teamdev.huds.su/bivi/backend/internal/stream/delivery"
 	_ "gitlab.teamdev.huds.su/bivi/backend/swagger" // include generated swagger documentation
 	"log/slog"
 	"time"
@@ -22,18 +23,19 @@ type FiberApp struct {
 }
 
 type APISettings struct {
-	Port        string
-	ContentPath string
+	Port                string
+	ContentPath         string
+	ClientLogPath       string
+	UploadFilesizeLimit int64
 }
 
-func NewFiberApp(settings APISettings, log *slog.Logger) *FiberApp {
+func NewFiberApp(settings APISettings, streamUseCase streamDelivery.UseCase, logger *slog.Logger) *FiberApp {
 	app := fiber.New()
+	app.Use(recover.New())
+	app.Use(fiberLogger.New())
+
 	staticApp := fiber.New()
 	app.Mount("/", staticApp)
-
-	app.Use(recover.New())
-	app.Use(requestid.New())
-	app.Use(logger.New())
 
 	app.Get("/metrics", monitor.New(monitor.Config{Title: "bivi metrics page"}))
 	app.Use(pprof.New())
@@ -43,18 +45,20 @@ func NewFiberApp(settings APISettings, log *slog.Logger) *FiberApp {
 		DocExpansion: "none",
 	}))
 
+	staticApp.Use(streamDelivery.StaticHandler(streamUseCase, logger))
 	staticApp.Use(compress.New(compress.Config{Level: compress.LevelBestSpeed}))
 	staticApp.Static("/", settings.ContentPath, fiber.Static{
 		Compress:      true,
-		CacheDuration: -1 * time.Second,
+		CacheDuration: -1 * time.Second, // disable cache
 	})
 
-	_ = app.Group("/api/v1")
-	// setup delivery
+	api := app.Group("/api/v1")
+	clientDelivery.NewDelivery(api.Group("/client"), settings.ClientLogPath, settings.UploadFilesizeLimit, logger)
+	streamDelivery.NewDelivery(api.Group("/streams"), streamUseCase, logger)
 
 	return &FiberApp{
 		fiber:  app,
-		logger: log,
+		logger: logger,
 	}
 }
 
